# albacore

./: AUTHORS  ChangeLog  ChangeLog.md  Doxyfile  README  README.md  configure.ac
.github/scripts/: albacore-build.sh  albacore-test-ucvm.sh
.github/workflows/: albacore-ci.yml  albacore-ucvm-ci.yml
data/: Makefile.am  alba_mod.txt  border  config  lonlat.txt  make_data_file.py  make_data_files.py  query_data_file.py  test_data_file.py  test_lonlat.txt
src/: Makefile.am  albacore.c  albacore.h
test/: Makefile.am  run_unit
tests/: Makefile.am  test.c  test_api.c
